--- a/src/routes/Navigation/navigation.styles.scss
+++ b/src/routes/Navigation/navigation.styles.scss
@@ -1,8 +1,10 @@
 .navbar {
-    display: flex;
-    padding: 20px;
-    justify-content: space-between;
-    align-items: center;
+    padding: 20px; 
+    .container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+    }
 }
 
 .links {
